gatewayapi-cilium/cilium-envoy-config.yaml
apiVersion: cilium.io/v2
kind: CiliumEnvoyConfig
metadata:
  name: gateway-frontend
  namespace: guestbook
spec:
  services:
  - name: cilium-gateway-frontend
    namespace: guestbook
  backendServices:
  - name: frontend
    namespace: guestbook
    port: 80
  resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: listener_80
    address:
      socket_address:
        address: "0.0.0.0"
        port_number: 9999
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: frontend
  - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: frontend
    connect_timeout: 5s
    type: EDS
    eds_cluster_config:
      eds_config:
        resource_api_version: V3
        api_config_source:
          api_type: REST_JSON
          cluster_names:
          - xds_cluster
